--- a/templates/create.html
+++ b/templates/create.html
@@ -2,15 +2,27 @@
 
 {{ template "header"}}
 
-<main role="main" class="inner cover">
-    <h1 class="cover-heading">Add Information</h1>
-    <form action="/save_article" method="post">
-        <input type="text" name="title" id="title" placeholder="Введите название статьи" class="form-control"><br>
-        <textarea name="anons" id="anons" class="form-control" placeholder="Введите аннонс статьи" cols="30" rows="10"></textarea><br>
-        <textarea name="full_text" id="full_text" class="form-control" placeholder="Введите полный текст статьи" cols="30" rows="10"></textarea><br>
-        <button>Add</button>
-    </form>
-</main>
+<body class="d-flex h-100 text-center text-white bg-dark">
+    
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"><div>
+      <header class="mb-auto">
+      
+      </header>
+      <main role="main" class="inner cover">
+        <h1 class="cover-heading">Add Information</h1>
+        <form action="/save_article" method="post">
+            <input type="text" name="title" id="title" placeholder="Введите название статьи" class="form-control"><br>
+            <textarea name="anons" id="anons" class="form-control" placeholder="Введите аннонс статьи" cols="30" rows="10"></textarea><br>
+            <textarea name="full_text" id="full_text" class="form-control" placeholder="Введите полный текст статьи" cols="30" rows="10"></textarea><br>
+            <button>Add</button>
+        </form>
+    </main>
+<body>
+    
+</body>      
+    
+    
+
 
 {{ template "footer"}}
 
