--- a/templates/header.html
+++ b/templates/header.html
@@ -1,38 +1,34 @@
 {{ define "header" }}
 
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Home page</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://getbootstrap.com/docs/5.1/examples/cover/cover.css">
-</head>
-<html lang="en" class="h-100">
-</head>
-<body class="flex text-center text-white bg-dark">
-   
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-<header class="mb-auto">
-    <div>
-      <h3 class="float-md-start mb-0">Herasymets</h3>
-      <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link active" aria-current="page" href="/">Home</a>
-        <a class="nav-link" href="/features">Features</a>
-        <a class="nav-link" href="/create">Add Information</a>
-      </nav>
-    </div>
-</header>
-</div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+  <header class="mb-auto">
+    <html lang="en">
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Home page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.1/examples/cover/cover.css">
+    </head>
+    <html lang="en" class="h-100">
+    </head>
+    <body class="flex text-center text-white bg-dark">
+    
+    
+   
+        <h3 class="float-md-start mb-0">Herasymets</h3>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link" href="/features">Features</a>
+          <a class="nav-link" href="/create">Add Information</a>
+        </nav>
+      
+    <body>
+      
+   
+  </header>
+
+
 {{ end }}
