--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
            
        
     <main class="px-3">
-      <h1>Cover your page.</h1>
-      <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+      <h1>OUR NEWS!</h1>
+      <p class="lead">For your attantion!</p>
       <p class="lead">
 
         {{ range. }}
@@ -20,7 +20,7 @@
         {{ else }}
         <p class="lead">Статьей нет!</p>
         {{ end }}
-        
+
         <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
       </p>
     </main>
