--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,10 @@
 {{ define "header" }}
 
 <!DOCTYPE html>
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-  <header class="mb-auto">
+<body class="d-flex h-100 text-center text-white bg-dark">
+    
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="mb-auto">
     <html lang="en">
     <head>
     <meta charset="UTF-8">
@@ -15,8 +17,6 @@
     <html lang="en" class="h-100">
     </head>
     <body class="flex text-center text-white bg-dark">
-    
-    
    
         <h3 class="float-md-start mb-0">Herasymets</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
@@ -25,10 +25,10 @@
           <a class="nav-link" href="/create">Add Information</a>
         </nav>
       
-    <body>
+      </body>
       
    
-  </header>
+   </header>
 
 
 {{ end }}
