--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,11 @@
 {{ define "index" }}
 
 {{ template "header"}}
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"><div>
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   
-  <body class="d-flex h-100 text-center text-white bg-dark">
            
        
-    <main class="px-3">
+   <main class="px-3">
       <h1>OUR NEWS!</h1>
       <p class="lead">For your attantion!</p>
       <p class="lead">
@@ -23,11 +22,10 @@
 
         <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
       </p>
-    </main>
-  </body>
+   </main>
+ 
 
 
-  
 {{ template "footer"}}
 
 {{ end }}
