--- a/templates/show.html
+++ b/templates/show.html
@@ -1,23 +1,21 @@
 {{ define "show" }}
 
 {{ template "header"}}
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"><div>
-  
-  <body class="d-flex h-100 text-center text-white bg-dark">
-           
-       
+
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+ <header class="mb-auto"> </header>     
+     
     <main class="px-3">
       <h1>{{ .Title }}</h1>
       <p class="lead">{{ .FullText }}</p>
       <p class="lead">
-
               <a href="/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Назад</a>
       </p>
     </main>
-  </body>
+ 
 
+   
 
-  
 {{ template "footer"}}
 
 {{ end }}
