--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,9 +1,6 @@
 {{ define "footer" }}
-<body class="d-flex h-100 text-center text-white bg-dark">
-<footer class="mastfoot mt-auto">
-  </div class="inner">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
-  </div>
+<footer class="mt-auto text-white-50">
+  <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
 </footer>
 </div>
 </body>
