--- a/templates/header.html
+++ b/templates/header.html
@@ -1,34 +1,36 @@
 {{ define "header" }}
 
 <!DOCTYPE html>
-<body class="d-flex h-100 text-center text-white bg-dark">
+<html>
+  <body class="d-flex h-100 text-center text-white bg-dark">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header class="mb-auto">
+      <html lang="en">
+      <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <title>Home page</title>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://getbootstrap.com/docs/5.1/examples/cover/cover.css">
+      <link rel="stylesheet" href="~/Projects/www/templates/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+      </head>
+      <html lang="en" class="h-100">
+      </head>
+      <body class="flex text-center text-white bg-dark">
     
-  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <header class="mb-auto">
-    <html lang="en">
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home page</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.1/examples/cover/cover.css">
-    </head>
-    <html lang="en" class="h-100">
-    </head>
-    <body class="flex text-center text-white bg-dark">
-   
-        <h3 class="float-md-start mb-0">Herasymets</h3>
-        <nav class="nav nav-masthead justify-content-center float-md-end">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-          <a class="nav-link" href="/features">Features</a>
-          <a class="nav-link" href="/create">Add Information</a>
-        </nav>
-      
-      </body>
-      
-   
-   </header>
-
-
+          <h3 class="float-md-start mb-0">infoNews</h3>
+          <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link active" aria-current="page" href="/">Главная</a>
+            <a class="nav-link" href="/features">Особенности</a>
+            <a class="nav-link" href="/create">Добавить статью+</a>
+          </nav>
+        
+        </body>
+        
+    
+      </header>
 {{ end }}
