--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,37 @@
 {{ define "index" }}
 
 {{ template "header"}}
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-  
-           
-       
-   <main class="px-3">
-      <h1>OUR NEWS!</h1>
-      <p class="lead">For your attantion!</p>
-      <p class="lead">
 
-        {{ range. }}
-        <div class="alert alert danger">
-          <h2>{{ .Title }}</h2>
-          <p>{{ .Anons }}</p>
-          <a href="/post/{{ .Id }}" class="btn btn-danger">Читать далее!</a>
-        </div>
-        {{ else }}
-        <p class="lead">Статьей нет!</p>
-        {{ end }}
-
-        <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
-      </p>
-   </main>
+<main class="px-3">
+  <h1>NEWS</h1>
  
-
+  <p class="lead">
+    {{ range. }}
+    <div class="container" style="padding-top:10px; padding-bottom: 10px;">
+    <div style=" border-color: #a5a5a577; background-color:#575a5e2f;" class="card">
+      <div class="card-body">
+        <div class="row">
+          <div class="d-flex justify-content-center">
+          <h2 class="card-title">{{ .Title }}</h2>
+      </div>
+        <div style="position:absolute; padding-top: 0px;"><div class="d-flex justify-content-end">
+          <a style=" border-color: #ffffff;" href="/delete_article/{{ .Id }}" class="btn">
+            <i style="color:#ffffff;" class="fa fa-times" aria-hidden="true"></i> 
+          </a> 
+        </div>
+      </div>
+    </div>
+      <p class="card-text">{{ .Anons }}</p>
+      <a href="/post/{{ .Id }}" class="btn btn-danger">Читать далее!</a>
+    </div>
+    </div>
+  </div>
+    {{ else }}
+    <p class="lead">Статьей нет!</p>
+    {{ end }}
+    <!-- <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a> -->
+  </p>
+</main>
 
 {{ template "footer"}}
 
