--- a/templates/header.html
+++ b/templates/header.html
@@ -24,9 +24,9 @@
     
           <h3 class="float-md-start mb-0">infoNews</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link active" aria-current="page" href="/">Главная</a>
+            <a class="nav-link active" aria-current="page" href="/articles/">Главная</a>
             <a class="nav-link" href="/features">Особенности</a>
-            <a class="nav-link" href="/create">Добавить статью+</a>
+            <a class="nav-link" href="/articles/new">Добавить статью+</a>
           </nav>
         
         </body>
