--- a/templates/new.html
+++ b/templates/new.html
@@ -1,4 +1,4 @@
-{{ define "create" }}
+{{ define "new" }}
 
 {{ template "header"}}
 
@@ -8,7 +8,7 @@
       <header class="mb-auto"> </header>
       <main role="main" class="inner cover">
         <h1 class="cover-heading">Добавить информацию</h1>
-        <form action="/save_article" method="post">
+        <form action="/articles/create" method="post">
             <input type="text" name="title" id="title" placeholder="Введите название статьи" class="form-control"><br>
             <textarea name="anons" id="anons" class="form-control" placeholder="Введите аннонс статьи" cols="30" rows="1"></textarea><br>
             <textarea name="full_text" id="full_text" class="form-control" placeholder="Введите полный текст статьи" cols="30" rows="10"></textarea><br>
