--- a/templates/show.html
+++ b/templates/show.html
@@ -9,7 +9,7 @@
       <h1>{{ .Title }}</h1>
       <p class="lead">{{ .FullText }}</p>
       <p class="lead">
-              <a href="/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Назад</a>
+              <a href="/articles/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Назад</a>
       </p>
     </main>
  
